kubernetes/rollout-backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
  namespace: wanderlust
spec:
  replicas: 2
  strategy:
    canary:
      steps:
      - setWeight: 30
      - pause: { duration: 90s }
      - setWeight: 100
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: <aws-account>.dkr.ecr.us-west-1.amazonaws.com/wanderlust-backend:latest
        ports:
        - containerPort: 5000
