kubernetes/rollout-frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
  namespace: wanderlust
spec:
  replicas: 3
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: { duration: 60s }
      - setWeight: 50
      - pause: { duration: 60s }
      - setWeight: 100
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: <aws-account>.dkr.ecr.us-west-1.amazonaws.com/wanderlust-frontend:latest
        ports:
        - containerPort: 80
